syntax = "proto3";

package product;

option go_package = "/rpc;productrpc";

// Product a physical item sold by e-merchants.
message Product {
    // Unique identifier of the product. Has the following format: [[:alnum:]]{4}-[[:alnum:]]{6}-[[:alnum:]]{4}.
    // e.g. BIGB-TSHIRT-BLUM
    string id = 1;

    // Displayed name of the product.
    string name = 2;

    // Unit price of the product in Euros.
    float price = 3;
}

service Service {
    // Fetch all existing products in the system.
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc ProductOfId(ProductOfIdRequest) returns (ProductOfIdResponse);
}

message ListProductsRequest {}

message ListProductsResponse {
    repeated Product products = 1;
}

message ProductOfIdRequest {
    string id = 1;
}

message ProductOfIdResponse {
    Product product = 1;
    string error = 2;
}
